@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) mod_proxy_http: Remove Warning headers with wrong date
+     PR 16138 [Nick Kew]
+
   *) mod_deflate: initialise inflate-out filter correctly when the
      first brigade contains no data buckets.
      PR 43512 [Nick Kew]
